# etri_semantic_media_verification

./: .gitignore  PROPRIETARY_NOTICE.md  README.md  pyproject.toml  run_demo.ps1  run_tests.ps1
config/: datasets.json  metrics.json  relation_types.json
deliverables/: ETRI_시맨틱_미디어_용역결과보고서.docx
docs/: data_model.md  delivery_manifest.md  final_report.md  metric_definition.md  operational_extension_plan.md  qvhighlights_application.md  system_design.md  test_scenarios.md  verification_procedure.md  year_end_roadmap.md
licenses/: THIRD_PARTY_NOTICES.md  open_source_usage.csv
samples/: etri_semantic_extension_sample.jsonl  qvhighlights_compatible_sample.jsonl
schemas/: evaluation_result.schema.json  prediction.schema.json  qvhighlights.schema.json  semantic_extension.schema.json
src/semantic_validator/: __init__.py  cli.py  jsonl.py  models.py
src/semantic_validator/adapters/: __init__.py  etri_system.py  mock_reference.py  reference_baseline.py
src/semantic_validator/assembly/: __init__.py  planner.py
src/semantic_validator/datasets/: __init__.py  base.py  qvhighlights.py
src/semantic_validator/evaluation/: __init__.py  highlight.py  moment.py  relations.py  semantic.py
tests/: test_dataset_adapter.py  test_demo.py  test_metrics.py  test_semantic.py
tools/: audit_report_docx.py  build_report_docx.py  build_report_pdf.py  create_contact_sheets.py  finalize_report_word.ps1
