[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "etri-semantic-media-verification"
version = "0.1.0"
description = "Report-stage reference architecture for semantic media verification"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
semantic-media-verify = "semantic_validator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

