[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "etri-semantic-media-verification"
version = "1.0.0"
description = "Semantic media verification system and evaluation toolkit"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
semantic-media-verify = "semantic_validator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
